# netcleanser

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
netcleanser/: __init__.py  email.py  url.py
tests/: test_email.py  test_url.py
