[tool.poetry]
name = "netcleanser"
version = "0.1.0"
description = ""
authors = ["Shinichi Takayanagi <shinichi.takayanagi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
